--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.site-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
+  /* width: 100%; */
 }
 
-.App-link {
-  color: #61dafb;
+.main-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* border: 1px solid red; */
+  height: 100%;
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.stages {
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+}
+
+.stage {
+  margin: 1%;
+  flex: 20%;
+  text-align: center;
+  padding: 1em;
+  border: 1px solid blue;
+}
+
+.card {
+  display: flex;
+  justify-content: space-between;
+  padding: 1em;
+  margin: 1em;
+  border: 1px solid red;
+}
+.right-section button {
+  margin: 0 0.5em 0 0.5em;
+}
+.fas,
+.fa {
+  font-size: 1.5em;
+}
+
+.new-task input,
+button {
+  height: 3em;
+  margin: 1em;
+}
+
+@media screen and (max-width: 750px) {
+  .stages {
+    flex-direction: column;
   }
 }
